[6.October 2008]
- maploaderfactory.rb: XmlMap2LoadStrategy added
- locs/ArcticLevelSet/ArcticTutorial: start and exit position fixed
- maploaderfactory.rb, location.rb: changes due to "Map2 -> Map" name change
- viking.rb: constant Map::TILE_SIZE never more exists

[4.October 2008 - St Francis of Assisi]
- location.rb: supports background/foreground painting

[3.October 2008]
- locationloader.rb: docs RD->RDoc
- tiledmaploadstrategy.rb and xmlmaploadstrategy.rb moved to SchwerEngine
- maploaderfactory.rb: require of moved classes removed; docs RD->RDoc
- location.rb, maploaderfactory.rb, locationloader.rb: Map2 used instead of 
  Map

[2.October 2008]
- utils/make_release.rb: It wasn't possible to access CVS via SSH
  yesterday while I was preparing archive for release; today I removed
  one temporary modification made yesterday because of this problem
- locs/Tests.../Tiled../MultiLayer2 - testing location for new Map
  features planned for SchwerEngine::Map2

[[[release 0.6] [10/01/2008] ----------------------------------------

[1.October 2008]
- utils/make_release.rb: modifications because of moving package depository
  to SourceForge

[30.September 2008]
- freevikings.rb: fixed error in safe Log4r loading (I misanderstood
  return values of Kernel::require - it returns false if the library
  has already been loaded and raises LoadError if it cannot be loaded)
- User's manual: chapter Troubleshooting
- Development guide: some 'link's changed to 'xref's
- utils/make_release.rb: gameui and schwerengine won't be distributed as
  separate packages, but inside freeVikings archive; 
  work on interactive mode started

[29.September 2008]
- Added directory lib/ (for 'redistributed' libraries -
  currently gameui, schwerengine and script)
- freevikings.rb: safe RUDL loading (checks for RubyGems and bypasses them
  if needed)
- User's manual: Installation, Running and Controls finished
- README: changed dependencies section (removed script, added note