@@ -1,11 +1,0 @@
-<?xml version="1.0"?>
-<map version="0.99a" orientation="orthogonal" width="2" height="2" tilewidth="40" tileheight="40">
- <tileset name="Untitled" firstgid="1" tilewidth="40" tileheight="40">
-  <image source="simple_tiles.png"/>
- </tileset>
- <layer name="Layer 0" width="2" height="2">
-  <data encoding="base64">
-   AQAAAAEAAAACAAAAAgAAAA==
-  </data>
- </layer>
-</map>
